<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/sky2"
    android:layout_marginBottom="50dp"
    android:layout_height="match_parent">
    <!--FAF7F7-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessLeaf,UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativeLayoutProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="1dp"
                android:visibility="gone"
                android:background="@drawable/loading_background"
                android:padding="5dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@android:color/holo_blue_dark" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layoutSearch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/search_border"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_search_24" />

                <EditText
                    android:id="@+id/edtTextSearch"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/round_corners"
                    android:hint="@string/enter_a_city"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColorHint="#63000000"
                    android:textSize="23sp"
                    tools:ignore="Autofill" />

                <ImageView
                    android:id="@+id/closeSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-30dp"
                    android:layout_marginTop="1dp"
                    android:backgroundTint="@android:color/black"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_close_24"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutSearch"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/temperature"
                    android:text="@string/temp"
                    android:textColor="#000000"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/city"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/time"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutInfo"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginTop="70dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:background="@android:color/white"
                    android:layout_margin="10dp"
                    android:elevation="1000dp"
                    android:padding="10dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/temperature_sensitive" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Temperature"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="--" android:id="@+id/temperature2"
                            android:textSize="23sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="200dp"
                    android:padding="10dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/wind" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Wind"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="--m/s"
                            android:textSize="23sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/layout">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="200dp"
                    android:padding="10dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/humidity" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Humidity"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="--%"
                            android:textSize="23sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:elevation="200dp"
                    android:padding="10dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/pressure" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pressure"
                            android:textSize="19sp" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="--hPa"
                            android:textSize="23sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</FrameLayout>